@@ -4,3 +4,5 @@ PYTHON_DIR='@PYTHONDIR@'
 PKG_DATA_DIR='@PKGDATADIR@'
 
 GARMON_VERSION='@GARMON_VERSION@'
+
+USE_GCONF=@USE_GCONF@
