@@ -1,3 +1,13 @@
+2009-02-18  Ben Van Mechelen  <me@benvm.be>
+
+	* configure.ac:
+	* garmon/__init__.py:
+	* garmon/defs.py.in:
+	* garmon/garmon_app.py:
+	* garmon/prefs.py:
+	    Use python's ConfigParser instead of gconf
+	    
+
 2009-01-28  Ben Van Mechelen  <me@benvm.be>
 
 	* garmon/garmon_app.py:
